--- a/AppCollection/Base.lproj/AppApp.storyboard
+++ b/AppCollection/Base.lproj/AppApp.storyboard
@@ -12,7 +12,7 @@
         <!--Applications-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="AppsViewController" id="BYZ-38-t0r" customClass="AppsViewController" customModule="AppusApplications" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AppsViewController" id="BYZ-38-t0r" customClass="AppsViewController" customModule="AppCollection" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -28,7 +28,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="applicationCell" rowHeight="62" id="0dB-8p-aJl" customClass="ApplicationTableViewCell" customModule="AppusApplications" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="applicationCell" rowHeight="62" id="0dB-8p-aJl" customClass="ApplicationTableViewCell" customModule="AppCollection" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="62"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0dB-8p-aJl" id="CrW-Nx-QmP">
@@ -48,7 +48,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uCE-TR-iDy" customClass="FloatRatingView" customModule="AppusApplications" customModuleProvider="target">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uCE-TR-iDy" customClass="FloatRatingView" customModule="AppCollection" customModuleProvider="target">
                                                     <rect key="frame" x="60" y="34" width="74" height="16"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <constraints>
@@ -132,7 +132,7 @@
         <!--Application details-->
         <scene sceneID="SgX-2e-MH0">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="hgz-2Z-UB8" customClass="DetailViewController" customModule="AppusApplications" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="hgz-2Z-UB8" customClass="DetailViewController" customModule="AppCollection" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="9CC-cf-xEl"/>
                         <viewControllerLayoutGuide type="bottom" id="1ZJ-tt-thd"/>
@@ -169,7 +169,7 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AOq-Hb-Dmm" customClass="FloatRatingView" customModule="AppusApplications" customModuleProvider="target">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AOq-Hb-Dmm" customClass="FloatRatingView" customModule="AppCollection" customModuleProvider="target">
                                                         <rect key="frame" x="106" y="68.5" width="88" height="20"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                         <constraints>
@@ -249,7 +249,7 @@
                                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                         </collectionViewFlowLayout>
                                                         <cells>
-                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellId" id="bW2-fk-7MV" customClass="DetailCollectionViewCell" customModule="AppusApplications" customModuleProvider="target">
+                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellId" id="bW2-fk-7MV" customClass="DetailCollectionViewCell" customModule="AppCollection" customModuleProvider="target">
                                                                 <rect key="frame" x="0.0" y="2" width="193" height="350"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
